<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_template_pkg</name>
  <version>0.0.0</version>
  <description>A template for custom ROS2 packages</description>
  <maintainer email="jerome.justin@sydney.edu.au">Jerome Justin</maintainer>
  <license>BSD</license>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>
  <depend>acfr_ros2_interfaces</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>ros2launch</exec_depend>

  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
